LIST OF CHANGES FOR NPG-QC PACKAGE

release 68.5.0
 - npg_simple_robo4artic:
     uses sample control flags instead of sample
     supplier names to decide on the robo evaluation criteria and the
     proposed manual QC outcome;
     evaluates positive controls in the same way as real samples 

release 68.4.0
 - npg_qc::autoqc::checks::generic and npg_qc::autoqc::results::generic -
   check and result objects for generic autoqc
 - DBIx class for the generic result
 - a new script, npg_autoqc_generic4artic, to generate generic autoqc
   results for artic pp

release 68.3.0
 - npg_simple_robo4artic:
     extended to consider negative and positive controls;
     no action (skip) for positive control, a separate set of evaluation
     criteria for negative controls;
     all outcomes are recorded as preliminary manual QC outcomes;
     QC summary is is recorded in the 'info' attribute of the review
     autoqc check
 - type of the 'info' attribute for file-based autoqc results is relaxed,
   changed from a hash of strings to a hash of arbitrary entities to allow
   for a nested data structure

release 68.2.1
 - allow the dot character in QC outcomes column values

release 68.2.0
 - tweak for genome coverage figure in qc summary - fall back to target 
   if no default autosomes only number available.
 - a new script - npg_simple_robo4artic - to generate autoqc review
   results from third party QC data
 - skip ref_match autoqc checks only for true GBS samples
 - SeqQC viewer: make visual cues for utility (user) QC  outcomes always
   visible regardless of whether they concur with the manual QC outcome
   or not

release 68.1.0
 - criteria_md5 attribute is added to the review autoqc result object;
   previously it was computed at a point of loading to the database
   and was available only in objects retrieved from the database;
   availability of this value at check execution time will be useful
   for planned generalisation of the review check