@@ -1,0 +1,13 @@
+DROP TABLE IF EXISTS `generic`;
+CREATE TABLE `generic` (
+  `id_generic` bigint(20) unsigned NOT NULL AUTO_INCREMENT COMMENT 'Auto-generated primary key',
+  `id_seq_composition` bigint(20) unsigned NOT NULL COMMENT 'A foreign key referencing the id_seq_composition column of the seq_composition table',
+  `pp_name` varchar(40) NOT NULL COMMENT 'Name of the portable pipeline or other tools, which generated the data',
+  `doc` json DEFAULT NULL COMMENT 'JSON document with assorted QC data',
+  `comments` text COMMENT 'Run-time comments and warnings',
+  `info` json DEFAULT NULL COMMENT 'JSON document with information on how the data were produced',
+  PRIMARY KEY (`id_generic`),
+  UNIQUE KEY `generic_id_compos_ppname_uniq` (`id_seq_composition`,`pp_name`),
+  CONSTRAINT `generic_compos` FOREIGN KEY (`id_seq_composition`) REFERENCES `seq_composition` (`id_seq_composition`) ON DELETE NO ACTION ON UPDATE NO ACTION
+) CHARSET=latin1 COMMENT='Arbitrary QC metrics produced by third party pipelines or tools';
+
